--- a/SimpsonsBot/app.config
+++ b/SimpsonsBot/app.config
@@ -5,7 +5,10 @@
     <add key="MicrosoftAppId" value=""/>
     <add key="MicrosoftAppPassword" value=""/>
   </appSettings>
-   <runtime>
-      <gcServer enabled="true"/>
-   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+  <runtime>
+    <gcServer enabled="true"/>
+  </runtime>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
+</configuration>
